tests/samples/valid/MathOperatorsAchievement.py
# cases where MathOperatorsAchievement should unlock

# >> CASE
4 + 4

# >> CASE
4 * 5

# >> CASE
4 - 5

# >> CASE
4 / 5

# >> CASE
4 // 5

# >> CASE
4 % 5

# >> CASE
2 ** 3

# >> CASE
[4, 5] @ [4, 5]

# >> CASE
[4 + 5 - 4 * 5 / 4 // 5 % 5 ** 1] @ [4]
